# kim

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
specs/001-input-stats/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-input-stats/checklists/: requirements.md
specs/001-input-stats/contracts/: cli.md
src/: lib.rs  state.rs
src/cli/: apps.rs  autostart.rs  history.rs  langs.rs  mod.rs  reset.rs  today.rs
src/db/: mod.rs  schema.rs  writer.rs
src/hooks/: keyboard.rs  mod.rs  mouse.rs  window.rs
src/ime/: mod.rs
src/stats/: app_tracker.rs  counters.rs  lang_tracker.rs  mod.rs
tests/integration/: app_stats_test.rs  autostart_test.rs  cli_output_test.rs  db_writer_test.rs  main.rs
