[package]
name = "kim"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kim"
path = "src/bin/kim/main.rs"

[[bin]]
name = "kimd"
path = "src/bin/kimd/main.rs"

[dependencies]
windows = { version = "0.56", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Ime",
    "Win32_Globalization",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
] }
windows-core = "0.56"
rusqlite = { version = "0.31", features = ["bundled"] }
crossbeam-channel = "0.5"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
log = "0.4"
simplelog = "0.12"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
strip = true

# kimd binary target needs windows subsystem (no console window)
# Applied via #![windows_subsystem = "windows"] in src/bin/kimd/main.rs
